making /design accessible